--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 
 <head>
     <title>Jar Jar Business</title>
+    <meta property="og:title" content="Jar Jar Business">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.jarjar.biz">
+    <meta property="og:image" content="https://www.jarjar.biz/jar-jar-business.jpeg">
+    <meta property="og:description" content="Welcome to Jar Jar Business, the ultimate destination for all your tax optimisation needs!">
     <style>
         body {
             display: flex;
